--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,8 @@
 :root{
     --primary-color:#00ABE4;
     --secondary-color:#E9F1FA;
-    --text-primary-color:#1e375a
+    --text-primary-color:#1e375a;
+    --hover-color:#2373ff;
     
 }
 .bg{
